# rust_modules

RUST_00/ex01/: min.rs
RUST_00/ex02/: collatz.rs  print_bytes.rs
RUST_00/ex03/: fizzbuzz.rs
RUST_00/ex04/: Cargo.toml
RUST_00/ex04/src/: other.rs  overflow.rs
RUST_00/ex05/src/: main.rs
RUST_00/ex06/src/: main.rs
RUST_00/ex07/src/: lib.rs  libex07.rlib  main.rs
RUST_01/ex00/src/: main.rs
RUST_01/ex01/src/: main.rs
RUST_01/ex02/src/: lib.rs
RUST_01/ex03/src/: lib.rs
RUST_01/ex04/src/: lib.rs
RUST_01/ex05/src/: lib.rs
RUST_01/ex06/src/: lib.rs
RUST_01/ex07/: Cargo.toml
RUST_01/ex07/src/: main.rs
RUST_02/ex00/src/: main.rs
RUST_02/ex01/src/: lib.rs
RUST_02/ex02/src/: lib.rs
RUST_02/ex03/src/: main.rs
RUST_02/ex04/src/: main.rs
RUST_02/ex05/src/: lib.rs
RUST_02/ex06/src/: main.rs
RUST_02/ex07/src/: main.rs
RUST_03/ex00/src/: main.rs
RUST_03/ex01/src/: lib.rs
RUST_03/ex02/src/: main.rs
RUST_03/ex03/src/: main.rs
RUST_03/ex04/src/: main.rs
RUST_03/ex05/src/: main.rs
